--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: install Doxygen
+        uses: ssciwr/doxygen-install@v1
 
       - name: Generate docs
         run: doxygen Doxyfile
