--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -89,6 +89,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/common/v1/common.grpc.pb.h
     ${PROTO_GEN_DIR}/common/v1/common.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.pb.h
+    ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/base/v1/base.pb.cc
+    ${PROTO_GEN_DIR}/component/base/v1/base.pb.h
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.h
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
@@ -172,6 +176,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/app/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.grpc.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.pb.cc
+    ${PROTO_GEN_DIR}/component/base/v1/base.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/base/v1/base.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.cc
@@ -199,6 +205,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/robot.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/base/v1/base.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/base/v1/base.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.grpc.pb.h
