Add mocks and flesh out impl

--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -93,6 +93,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.h
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.h
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.h
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.h
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
@@ -170,6 +174,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/common/v1/common.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/component/motor/v1/motor.grpc.pb.cc
@@ -195,6 +201,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/motor/v1/motor.grpc.pb.h
