--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -15,6 +15,7 @@
 enable_testing()
 include(viamcppsdk_utils)
 viamcppsdk_add_boost_test(test_base.cpp)
+viamcppsdk_add_boost_test(test_board.cpp)
 viamcppsdk_add_boost_test(test_camera.cpp)
 viamcppsdk_add_boost_test(test_encoder.cpp)
 viamcppsdk_add_boost_test(test_generic_component.cpp)
