--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -73,6 +73,7 @@ target_sources(viamsdk
     tests/mocks/camera_mocks.cpp
     tests/mocks/generic_mocks.cpp
     tests/mocks/mock_motor.cpp
+    tests/mocks/mock_robot.cpp
   PUBLIC FILE_SET viamsdk_public_includes TYPE HEADERS
     BASE_DIRS
       ../..
@@ -112,6 +113,7 @@ target_sources(viamsdk
       ../../viam/sdk/tests/mocks/camera_mocks.hpp
       ../../viam/sdk/tests/mocks/generic_mocks.hpp
       ../../viam/sdk/tests/mocks/mock_motor.hpp
+      ../../viam/sdk/tests/mocks/mock_robot.hpp
 )
 
 set_target_properties(
