--- a/etc/docker/Dockerfile.ubuntu.jammy
+++ b/etc/docker/Dockerfile.ubuntu.jammy
@@ -10,10 +10,10 @@ RUN apt-get -y dist-upgrade
 RUN apt-get -y --no-install-recommends install \
     build-essential \
     ca-certificates \
-    clang \
     g++ \
     gdb \
     git \
+    gnupg \
     gpg \
     libboost-all-dev \
     libgrpc++-dev \
@@ -23,9 +23,20 @@ RUN apt-get -y --no-install-recommends install \
     protobuf-compiler \
     protobuf-compiler-grpc \
     sudo \
+    software-properties-common \
     wget
 
+# Add the public key for the llvm repository to get the correct clang version
+RUN bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
+RUN apt-add-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy main'
+
+# Add public key and repository to get cmake 3.25+
 RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
 RUN echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' > /etc/apt/sources.list.d/kitware.list
 RUN apt-get update
+
+RUN apt-get -y --no-install-recommends install -t llvm-toolchain-jammy \
+    clang-13 \
+    clang-tidy-13
+
 RUN apt-get -y install cmake
