--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,6 +278,8 @@ add_custom_target(
 set(VIAMCPPSDK_BOOST_VERSION_MINIMUM 1.71)
 set(VIAMCPPSDK_GRPC_VERSION_MINIMUM 1.30.2)
 set(VIAMCPPSDK_PROTOBUF_VERSION_MINIMUM 3.12.4)
+set(VIAMCPPSDK_XTENSOR_VERSION_MINIMUM 0.24.6)
+set(VIAMCPPSDK_XTENSOR_VERSION_MINIMUM 0.7.5)
 
 # Time to find `BOOST`.
 find_package(Boost ${VIAMCPPSDK_BOOST_VERSION_MINIMUM} REQUIRED COMPONENTS headers log)
@@ -355,6 +357,9 @@ else()
   set(VIAMCPPSDK_GRPCXX_REFLECTION_LIB ${VIAMCPPSDK_GRPCXX_ROOT}_reflection)
   list(PREPEND VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES ${VIAMCPPSDK_GRPCXX_REFLECTION_LIB})
 endif()
+
+find_package(xtl ${VIAMCPPSDK_XTL_VERSION_MINIMUM} CONFIG REQUIRED)
+find_package(xtensor ${VIAMCPPSDK_XTENSOR_VERSION_MINIMUM} CONFIG REQUIRED)
 
 # Pull in our subdirectories
 add_subdirectory(src/viam)
