more portability fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,11 +275,16 @@ add_custom_target(
 )
 
 
+set(VIAMCPPSDK_ABSL_VERSION_MINIMUM)  # Someday?
 set(VIAMCPPSDK_BOOST_VERSION_MINIMUM 1.71)
 set(VIAMCPPSDK_GRPC_VERSION_MINIMUM 1.30.2)
 set(VIAMCPPSDK_PROTOBUF_VERSION_MINIMUM 3.12.4)
 set(VIAMCPPSDK_XTL_VERSION_MINIMUM 0.7.2)
 set(VIAMCPPSDK_XTENSOR_VERSION_MINIMUM 0.24.3)
+
+# Time to find absl. Note that the version min value is currently empty,
+# because absl doesn't use a versioning scheme that works here.
+find_package(absl ${VIAMCPPSDK_ABSL_VERSION_MINIMUM} REQUIRED)
 
 # Time to find `BOOST`.
 find_package(Boost ${VIAMCPPSDK_BOOST_VERSION_MINIMUM} REQUIRED COMPONENTS headers log)
@@ -358,8 +363,23 @@ else()
   list(PREPEND VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES ${VIAMCPPSDK_GRPCXX_REFLECTION_LIB})
 endif()
 
-find_package(xtl ${VIAMCPPSDK_XTL_VERSION_MINIMUM} CONFIG REQUIRED)
-find_package(xtensor ${VIAMCPPSDK_XTENSOR_VERSION_MINIMUM} CONFIG REQUIRED)
+include(FetchContent)
+
+FetchContent_Declare(
+  xtl
+  GIT_REPOSITORY https://github.com/xtensor-stack/xtl.git
+  GIT_TAG        e0f00666d90086bb245ae73abb6123d0e2c1b30b # 0.7.2
+  FIND_PACKAGE_ARGS ${VIAMCPPSDK_XTL_VERSION_MINIMUM} CONFIG
+)
+
+FetchContent_Declare(
+  xtensor
+  GIT_REPOSITORY https://github.com/xtensor-stack/xtensor
+  GIT_TAG        9e8662ddad7fcd1a96969b96bf8955e59cf44978 # 0.24.3
+  FIND_PACKAGE_ARGS ${VIAMCPPSDK_XTENSOR_VERSION_MINIMUM} CONFIG
+)
+
+FetchContent_MakeAvailable(xtl xtensor)
 
 # Pull in our subdirectories
 add_subdirectory(src/viam)
