--- a/src/viam/config/viam-cpp-sdkConfig.cmake.in
+++ b/src/viam/config/viam-cpp-sdkConfig.cmake.in
@@ -1,11 +1,17 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
+
+find_dependency(absl)
+
 find_dependency(Boost @Boost_VERSION_MAJOR@.@Boost_VERSION_MINOR@ COMPONENTS headers log)
 
 if (@gRPC_FOUND@)
   find_dependency(gRPC @gRPC_VERSION_MAJOR@.@gRPC_VERSION_MINOR@ CONFIG)
 endif()
+
+find_dependency(xtl @xtl_VERSION_MAJOR@.@xtl_VERSION_MINOR@)
+find_dependency(xtensor @xtensor_VERSION_MAJOR@.@xtensor_VERSION_MINOR@)
 
 # NOTE(acm): It is up to us to decide what components to get if none
 # are specified. Since the common use case should be getting the SDK,
