--- a/etc/docker/Dockerfile.ubuntu.jammy
+++ b/etc/docker/Dockerfile.ubuntu.jammy
@@ -10,33 +10,38 @@ RUN apt-get -y dist-upgrade
 RUN apt-get -y --no-install-recommends install \
     build-essential \
     ca-certificates \
+    curl \
+    doxygen \
     g++ \
     gdb \
     git \
     gnupg \
     gpg \
+    less \
+    libabsl-dev \
     libboost-all-dev \
     libgrpc++-dev \
     libprotobuf-dev \
+    libssl-dev \
     ninja-build \
     pkg-config \
     protobuf-compiler \
     protobuf-compiler-grpc \
-    sudo \
     software-properties-common \
+    sudo \
     wget
 
 # Add the public key for the llvm repository to get the correct clang version
 RUN bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
-RUN apt-add-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy main'
+RUN apt-add-repository -y 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-15 main'
 
 # Add public key and repository to get cmake 3.25+
 RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - > /usr/share/keyrings/kitware-archive-keyring.gpg
 RUN echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' > /etc/apt/sources.list.d/kitware.list
 RUN apt-get update
 
-RUN apt-get -y --no-install-recommends install -t llvm-toolchain-jammy \
-    clang-13 \
-    clang-tidy-13
+RUN apt-get -y --no-install-recommends install -t llvm-toolchain-jammy-15 \
+    clang-15 \
+    clang-tidy-15
 
 RUN apt-get -y install cmake
