--- a/src/viam/examples/modules/CMakeLists.txt
+++ b/src/viam/examples/modules/CMakeLists.txt
@@ -40,3 +40,25 @@ install(
   TARGETS example_mlmodel
   COMPONENT examples
 )
+
+find_path(TFLITE_INCLUDE_PATH "tensorflow/lite/c/c_api.h")
+find_library(TFLITE_LIBRARY "tensorflowlite_c")
+if (EXISTS ${TFLITE_INCLUDE_PATH} AND EXISTS ${TFLITE_LIBRARY})
+  add_executable(mlmodelservice_tflite
+    mlmodelservice_tflite.cpp
+  )
+
+  target_link_libraries(mlmodelservice_tflite
+    PRIVATE Threads::Threads
+    PRIVATE viam-cpp-sdk::viamsdk
+    PRIVATE tensorflowlite_c
+  )
+
+  install(
+    TARGETS mlmodelservice_tflite
+    COMPONENT examples
+  )
+else()
+  message(WARNING "Failed to find tflite C headers/library: tflite example module will not be built")
+  message(WARNING "If you have tflite in a non-standard location, add -DCMAKE_PREFIX_PATH=/path/to/tflite to your CMake invocation")
+endif()
