--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -21,7 +21,7 @@ jobs:
           && ./vcpkg install grpc \
           && ./vcpkg install upb
       - name: setup-openssl
-        run: sudo apt-get install libssl-dev
+        run: sudo apt-get update && sudo apt-get -y --no-install-recommends install libssl-dev
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.81.0
